--- a/Artur-main/Robson/index.html
+++ b/Artur-main/Robson/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body> 
+    <section id="Negão da 300"
+    tabindex="0"> Negão da 300
 
     <h1> Macaco estiloso </h1>
 
